--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
     <title>Faraz Kabir Khan</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
     <link rel="stylesheet" href="dist/output.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-1W0MT0PK2H"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-1W0MT0PK2H');
+    </script>
 
     <script>
         var bg_color;
@@ -256,7 +265,7 @@
                                 class="mr-2 dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">
                                 Arduino
                             </span>
-                            
+
                             <span
                                 class="mr-2 dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">
                                 PyTorch
@@ -906,8 +915,8 @@
                                     class=" bg-white/75 dark:bg-gray-800/50  md:ml-0  h-full flex flex-col rounded-lg shadow-lg">
                                     <a href="https://www.youtube.com/watch?v=T0rjPaVSFhM" target="_blank"
                                         class="w-full h-64" type="button">
-                                        <img class="rounded-t-lg w-full  h-full object-cover " src="images/Linkwave-app.png"
-                                            alt="Linkwave App" />
+                                        <img class="rounded-t-lg w-full  h-full object-cover "
+                                            src="images/Linkwave-app.png" alt="Linkwave App" />
                                     </a>
                                     <div class="p-5 grow">
 
@@ -948,8 +957,8 @@
                                     class=" bg-white/75 dark:bg-gray-800/50  md:ml-0  h-full flex flex-col rounded-lg shadow-lg">
                                     <a href="https://github.com/Rafat97/MSD-Alert-System" target="_blank"
                                         class="w-full h-64" type="button">
-                                        <img class="rounded-t-lg w-full  h-full object-cover  " src="images/Alert System.jpg"
-                                            alt="Alert System" />
+                                        <img class="rounded-t-lg w-full  h-full object-cover  "
+                                            src="images/Alert System.jpg" alt="Alert System" />
                                     </a>
                                     <div class="p-5 grow">
 
@@ -964,9 +973,10 @@
                                             <span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Microcontroller</span>
 
-                                           
+
                                         </p>
-                                        <p class="mb-3 font-normal text-t-black dark:text-gray-200 ">A prototype and simulation of
+                                        <p class="mb-3 font-normal text-t-black dark:text-gray-200 ">A prototype and
+                                            simulation of
                                             microcontroller based system for fire, gas and Covid-19 suspect alert for
                                             houses.</p>
                                     </div>
