--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faraz Kabir Khan</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
-    <link rel="stylesheet" href="dist/output.css">
+    <meta property="og:title" content="faraz Kabir Khan" />
+    <meta
+      property="og:description"
+      content="Portfolio website of Faraz Kabir Khan"
+    />
+    <meta
+      property="og:image"
+      content="images/Me.jpg"
+    />
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1W0MT0PK2H"></script>
     <script>
@@ -29,6 +37,8 @@
             bg_color = '#fff';
         }
     </script>
+    <link rel="stylesheet" href="dist/output.css">
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
