--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faraz Kabir Khan</title>
     <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
-    <meta property="og:title" content="faraz Kabir Khan" />
+    <meta property="og:title" content="Faraz Kabir Khan" />
     <meta
       property="og:description"
-      content="Portfolio website of Faraz Kabir Khan"
+      content="Md. Faraz Kabir Khan is an AI apprentice and an experienced web developer from Bangladesh. "
     />
     <meta
       property="og:image"
-      content="images/Me.jpg"
+      content="images/With Whiteboard.jpg"
     />
+    <meta name="keywords" content="Faraz Kabir Khan, Faraz, Faraz Khan, Web Developer, AI Engineer, Artificial Intelligence Engineer, Software Engineer, Front-end Web Developer">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1W0MT0PK2H"></script>
     <script>
