--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <meta
       property="og:image"
-      content="images/With Whiteboard.jpg"
+      content="images/Faraz.jpg"
     />
     <meta name="keywords" content="Faraz Kabir Khan, Faraz, Faraz Khan, Web Developer, AI Engineer, Artificial Intelligence Engineer, Software Engineer, Front-end Web Developer">
     <!-- Global site tag (gtag.js) - Google Analytics -->
