--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
                     <h1 data-aos="fade-down" class="md:text-6xl text-4xl t-font dark:text-white text-t-black ">Hello, I
                         am</h1>
                     <h1 data-aos="fade-down"
-                        class=" text-6xl text-t-black mt-2 t-font leading-none dark:text-white border-solid border-b-8 leading-neg border-gradient-to-l from-t-red via-t-blue to-t-red b-slice inline-block">
+                        class=" md:text-6xl text-5xl text-t-black mt-2 t-font leading-none dark:text-white border-solid border-b-8 leading-neg border-gradient-to-l from-t-red via-t-blue to-t-red b-slice inline-block">
                         Faraz Khan</h1>
                     <div
                         class="mt-8 mb-8 scramble-text md:h-min h-24 md:text-5xl text-4xl t-font dark:text-white text-t-black">
@@ -183,7 +183,7 @@
                     <div class="md:w-1/4 md:p-2 ">
                         <img data-tilt data-tilt-glare data-tilt-max-glare="0.9" data-tilt-scale="1.05"
                             class="rounded-lg shadow-xl  hover:shadow-lg dark:hover:shadow-lg transition-all duration-700  shadow-t-blue/80  dark:shadow-t-red/80"
-                            src="images/me.jpg" />
+                            src="images/Faraz Khan.jpg" />
 
                     </div>
                     <div class="md:w-3/4 md:p-2 md:px-6 ">
