--- a/activities.html
+++ b/activities.html
@@ -130,7 +130,9 @@
         AOS.init();
     </script>
     <!-- <script src="js/vanilla-tilt.min.js"></script> -->
-    <script src="node_modules/@themesberg/flowbite/dist/flowbite.bundle.js"></script>
+    <!-- <script src="node_modules/@themesberg/flowbite/dist/flowbite.bundle.js"></script> -->
+    <script src="https://unpkg.com/flowbite@1.3.3/dist/flowbite.js"></script>
+
     <script>
         var themeToggleDarkIcon = document.getElementById('theme-toggle-dark-icon');
         var themeToggleLightIcon = document.getElementById('theme-toggle-light-icon');
