--- a/index.html
+++ b/index.html
@@ -1137,7 +1137,7 @@
 
     </main>
     <footer class=" py-5 border-t-2 border-gray-300 dark:border-gray-800">
-        <h1 class="grad-text text-2xl text-center bg-gradient-to-r from-t-blue to-t-red grad-anim">Designed and
+        <h1 class="grad-text text-xl text-center bg-gradient-to-r from-t-blue to-t-red grad-anim">Designed and
             Developed by Faraz Kabir Khan</h1>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
