--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Generative
                                 Adversarial Networks</span>, <span
                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Autonomous
-                                Vehicles,</span> and others similar to these.
+                                Vehicles</span>, and others similar to these.
                             I am also available for <span
                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">freelance
                                 work</span>. Feel free to contact me anytime at <a
