animation-bug fix

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
 
     <main class=" ">
 
-        <section class="" id="hero-section">
-            <div class="min-h-screen flex items-center w-full   ">
+        <section class="overflow-x-hidden" id="hero-section">
+            <div class="h-screen flex items-center w-full   ">
                 <div class="container  mx-auto flex-wrap justify-start relative">
                     <div class="absolute top-1/2 translate-y-[-50%] right-0 md:flex hidden flex-col space-y-4 px-4 ">
                         <a class="" target="_blank" href="https://www.facebook.com/farazkabirkhan.shad/">
