--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                                         <a href="https://www.brandonehofer.com/" target="_blank">
                                             <h5
                                                 class="mb-2 text-2xl font-bold   text-t-black uppercase uppercase dark:text-t-red filter dark:contrast-125">
-                                                Online Coach Creator</h5>
+                                                Kajabi Project - BiTechX</h5>
                                         </a>
                                         <p class="font-thin mb-3 font-normal text-t-black dark:text-white"><span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Kajabi</span>
@@ -649,7 +649,7 @@
                                         <a href="https://vibrantskindsm.com/" target="_blank">
                                             <h5
                                                 class="mb-2 text-2xl font-bold   text-t-black uppercase uppercase dark:text-t-red filter dark:contrast-125">
-                                                Vibrant Skin and Body</h5>
+                                                WordPress Project - BiTechX</h5>
                                         </a>
                                         <p class="font-thin mb-3 font-normal text-t-black dark:text-white w-full"><span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">WordPress</span>
@@ -685,7 +685,7 @@
                                         <a href="https://www.collegepreproadmap.com/" target="_blank">
                                             <h5
                                                 class="mb-2 text-2xl font-bold   text-t-black uppercase uppercase dark:text-t-red filter dark:contrast-125">
-                                                College Prep Roadmap</h5>
+                                                Kajabi Project - BiTechX</h5>
                                         </a>
                                         <p class="font-thin mb-3 font-normal text-t-black dark:text-white"><span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Kajabi</span>
