--- a/index.html
+++ b/index.html
@@ -897,10 +897,10 @@
                                     </a>
 
                                     <div class="p-5 grow">
-                                        <a href="#">
+                                        <a href="https://www.youtube.com/watch?v=pEu7r2E17vw&list=PLlW3il1pE_XQUyGRwwlrAVd9MXt8KXeHz" target="_blank">
                                             <h5
                                                 class="mb-2 text-2xl font-bold   text-t-black uppercase dark:text-t-red filter dark:contrast-125">
-                                                Beginner's Guide to WordPress(Course)</h5>
+                                                WordPress for Beginners(Course)</h5>
                                         </a>
                                         <p class="font-thin mb-3 font-normal text-t-black dark:text-white"><span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">WordPress</span>
