Information update homepage

--- a/index.html
+++ b/index.html
@@ -359,7 +359,7 @@
                                 Member, Programming Team</p>
                             <time
                                 class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500">November
-                                2019 - Present</time>
+                                2019 - March 2022</time>
 
                             <!-- <p class="text-base font-normal text-gray-500 dark:text-gray-400">Get started with dozens of web components and interactive elements.</p> -->
                         </div>
@@ -812,6 +812,68 @@
                                     class=" bg-white/75 dark:bg-gray-800/50  md:ml-0  h-full flex flex-col rounded-lg shadow-lg">
 
                                     <div class="p-5 grow">
+                                        <a href="https://github.com/farazkabir/Hand-Cricket" target="_blank">
+                                            <h5
+                                                class="mb-2 text-2xl font-bold   text-t-black uppercase uppercase dark:text-t-blue filter dark:contrast-125">
+                                                Hand Cricket</h5>
+                                        </a>
+                                        <p class="font-thin mb-3 font-normal text-t-black dark:text-white"><span
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Python</span>
+                                            <span
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Mediapipe</span>
+                                            <span
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">OpenCV</span>
+                                        </p>
+                                        <p class="mb-3 font-normal text-t-black dark:text-gray-200 ">Hand Cricket is a popular game among school students in Bangladesh. It is basically cricket played with fingers. This is an implementation of that game with computer vision. One can play hand cricket with the computer with this project.</p>
+                                    </div>
+                                    <div class="pb-5 px-5">
+                                        <a class=" mt-auto bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
+                                            href="https://github.com/farazkabir/Hand-Cricket" target="_blank">View
+                                            Project</a>
+                                    </div>
+
+
+                                </div>
+
+
+                            </div>
+                            <div class="md:w-1/3 max-w-full p-3 md:pl-0 ">
+                                <div
+                                    class=" bg-white/75 dark:bg-gray-800/50  md:ml-0  h-full flex flex-col rounded-lg shadow-lg">
+
+                                    <div class="p-5 grow">
+                                        <a href="https://github.com/farazkabir/Remove-text-from-multiple-images" target="_blank">
+                                            <h5
+                                                class="mb-2 text-2xl font-bold   text-t-black uppercase uppercase dark:text-t-blue filter dark:contrast-125">
+                                                Remove text from multiple/bulk images</h5>
+                                        </a>
+                                        <p class="font-thin mb-3 font-normal text-t-black dark:text-white"><span
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Python</span>
+                                            <span
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Keras OCR</span>
+                                            <span
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">OpenCV</span>
+                                        </p>
+                                        <p class="mb-3 font-normal text-t-black dark:text-gray-200 "> A script that allows the user to remove texts from multiple images automatically or without human assistance using keras ocr and opencv inpainting</p>
+                                    </div>
+                                    <div class="pb-5 px-5">
+                                        <a class=" mt-auto bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
+                                            href="https://github.com/farazkabir/Remove-text-from-multiple-images" target="_blank">View
+                                            Project</a>
+                                    </div>
+
+
+                                </div>
+
+
+                            </div>
+                            
+                            
+                            <div class="md:w-1/3 max-w-full p-3 md:pl-0 ">
+                                <div
+                                    class=" bg-white/75 dark:bg-gray-800/50  md:ml-0  h-full flex flex-col rounded-lg shadow-lg">
+
+                                    <div class="p-5 grow">
                                         <a href="https://github.com/Rafat97/garbage-detection" target="_blank">
                                             <h5
                                                 class="mb-2 text-2xl font-bold   text-t-black uppercase uppercase dark:text-t-blue filter dark:contrast-125">
@@ -1140,8 +1202,8 @@
 
     </main>
     <footer class=" py-5 border-t-2 border-gray-300 dark:border-gray-800">
-        <h1 class="grad-text text-xl text-center bg-gradient-to-r from-t-blue to-t-red grad-anim">Designed and
-            Developed by Faraz Kabir Khan</h1>
+        <a href = "https://github.com/farazkabir/Portfolio-Web-Template" target="_blank" class="grad-text text-xl text-center bg-gradient-to-r from-t-blue to-t-red grad-anim">Designed and
+            Developed by Faraz Kabir Khan</a>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
