--- a/index.html
+++ b/index.html
@@ -820,7 +820,7 @@
                                         <p class="font-thin mb-3 font-normal text-t-black dark:text-white"><span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Python</span>
                                             <span
-                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Mediapipe</span>
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">MediaPipe</span>
                                             <span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">OpenCV</span>
                                         </p>
@@ -1081,7 +1081,7 @@
                 </div>
             </div>
         </section>
-        <section data-aos="fade-up" class="pb-16 py-7" id="contact">
+        <section  class="pb-16 py-7" id="contact">
             <div class="container">
                 <div class="p-1  bg-gradient-to-l from-t-red via-t-blue to-t-red rounded-lg  ">
                     <div class=" flex flex-wrap flex-col bg-white dark:bg-t-black px-4 py-11 md:p-16   rounded-lg">
@@ -1201,9 +1201,10 @@
         </div>
 
     </main>
-    <footer class=" py-5 border-t-2 border-gray-300 dark:border-gray-800">
-        <a href = "https://github.com/farazkabir/Portfolio-Web-Template" target="_blank" class="grad-text text-xl text-center bg-gradient-to-r from-t-blue to-t-red grad-anim">Designed and
-            Developed by Faraz Kabir Khan</a>
+    <footer class=" text-center py-5 border-t-2 border-gray-300 dark:border-gray-800">
+        <a href = "https://github.com/farazkabir/Portfolio-Web-Template" target="_blank" class="w-full grad-text text-xl text-center bg-gradient-to-r from-t-blue to-t-red grad-anim">
+            Designed and
+            Developed by </br>&lt;Faraz Kabir Khan/&gt;</a>
     </footer>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
