--- a/index.html
+++ b/index.html
@@ -854,7 +854,7 @@
                                             <span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">OpenCV</span>
                                         </p>
-                                        <p class="mb-3 font-normal text-t-black dark:text-gray-200 "> A script that allows the user to remove texts from multiple images automatically or without human assistance using keras ocr and opencv inpainting</p>
+                                        <p class="mb-3 font-normal text-t-black dark:text-gray-200 "> A script that allows the user to remove texts from multiple images automatically or without human assistance using Keras OCR and OpenCV inpainting.</p>
                                     </div>
                                     <div class="pb-5 px-5">
                                         <a class=" mt-auto bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
