--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <meta property="og:title" content="Faraz Kabir Khan" />
     <meta
       property="og:description"
+      content="Md. Faraz Kabir Khan is an AI researcher and an experienced web developer from Bangladesh. "
+    />
+    <meta
+      name="description"
       content="Md. Faraz Kabir Khan is an AI apprentice and an experienced web developer from Bangladesh. "
     />
     <meta
