Profile photo update

--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                     <div class="md:w-1/4 md:p-2 ">
                         <img data-tilt data-tilt-glare data-tilt-max-glare="0.9" data-tilt-scale="1.05"
                             class="rounded-lg shadow-xl  hover:shadow-lg dark:hover:shadow-lg transition-all duration-700  shadow-t-blue/80  dark:shadow-t-red/80"
-                            src="images/Faraz Khan.jpg" />
+                            src="images/Faraz.jpeg" />
 
                     </div>
                     <div class="md:w-3/4 md:p-2 md:px-6 ">
