--- a/index.html
+++ b/index.html
@@ -1263,7 +1263,7 @@
 
 
         <!-- Large Modal -->
-        <div class="hidden overflow-y-auto overflow-x-hidden fixed right-0 left-0 top-4 z-50 justify-center items-center md:inset-0 h-modal sm:h-full"
+        <div class="hidden overflow-y-auto overflow-x-hidden fixed right-0 left-0 top-4 z-50 justify-center items-center md:inset-0 h-modal h-full"
             id="large-modal">
             <div class="absolute overflow-y-auto top-0 px-4 w-full max-w-4xl h-full md:h-auto">
                 <!-- Modal content -->
