--- a/index.html
+++ b/index.html
@@ -606,13 +606,10 @@
                         Anjum, Abrar Zahir Niloy, In 19th ACS/IEEE International Conference on Computer Systems and
                         Applications (AICCSA 2022).</p>
 
-                    <button onClick="set_img(this)"
-                        class="mt-3 bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500 "
-                        type="button" data-modal-toggle="large-modal">
-                        <img class="rounded-t-lg w-full hidden object-top h-full object-cover hover:object-bottom transition-all duration-[4500ms]"
-                            src="images/Book cover synthesis from the summary - preview.jpg"
-                            alt="Book cover synthesis from the summary - preview" />View
-                    </button>
+                        <div class="pb-5 mt-3">
+                            <a class="  bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
+                                href="https://arxiv.org/abs/2211.02138" target="_blank">View </a>
+                        </div>
 
 
                 </div>
