--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                             pioneering projects. Currently, I am working with the <a href="https://circuitmaesters.com/"
                                 target="_blank" class=" dark:hover:text-t-red hover:text-t-red"><em>Circuit
                                     Maesters</em></a> to build the <span class="text-t-red">first driverless formula
-                                racing car</span> in Bangladesh. I am also helping team <a
+                                racing car</span> in Bangladesh. I have also helped team <a
                                 href="https://austmarsrover.org/" target="_blank"
                                 class=" dark:hover:text-t-red hover:text-t-red"><em>AUST Mars Rover</em></a> to build
                             <span class="text-t-red">mars exploration rovers.</span>
