--- a/index.html
+++ b/index.html
@@ -197,15 +197,14 @@
                             Science and Engineering graduate. While attending university, I worked part-time in <a
                                 href="https://www.bitechx.com/" target="_blank"
                                 class="dark:hover:text-t-red hover:text-t-red "><em>BiTechX</em></a> as a <span
-                                class="text-t-red">Senior front-end web developer</span> with clients from the USA,
-                            Canada, Russia, and other countries. I feel thrilled working on innovative ideas and
-                            pioneering projects. Currently, I am working with the <a href="https://circuitmaesters.com/"
+                                class="text-t-red">senior front-end web developer</span> with clients from the USA,
+                            Canada, Russia, and other countries. I feel thrilled about engaging in innovative ideas and pioneering projects. Currently, I am am collaborating with <a href="https://circuitmaesters.com/"
                                 target="_blank" class=" dark:hover:text-t-red hover:text-t-red"><em>Circuit
                                     Maesters</em></a> to build the <span class="text-t-red">first driverless formula
                                 racing car</span> in Bangladesh. I have also helped team <a
                                 href="https://austmarsrover.org/" target="_blank"
-                                class=" dark:hover:text-t-red hover:text-t-red"><em>AUST Mars Rover</em></a> to build
-                            <span class="text-t-red">mars exploration rovers.</span>
+                                class=" dark:hover:text-t-red hover:text-t-red"><em>AUST Mars Rover</em></a> to construct
+                            <span class="text-t-red">Mars exploration rovers.</span>
                         </p>
                         <p class="mt-3 text-lg text-t-black dark:text-white">
                             So far, I have worked with these technologies -
