--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                             class=" text-t-blue text-4xl mt-8 md:mt-0  font-bold bg-gradient-to-l from-t-blue via-blue-700 to-t-red  grad-text ">
                             About Me</h1>
                         <p class="text-lg text-t-black dark:text-white">Hello, I am Faraz Kabir Khan. I am a Computer
-                            Science and Engineering graduate. While attending university, I worked part-time in <a
+                            Science and Engineering graduate. While attending university, I worked part-time at <a
                                 href="https://www.bitechx.com/" target="_blank"
                                 class="dark:hover:text-t-red hover:text-t-red "><em>BiTechX</em></a> as a <span
                                 class="text-t-red">senior front-end web developer</span> with clients from the USA,
