--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </li>
                    
                     <li class="w-full text-center">
-                        <a href="#publication" class="nav-link">Publication</a>
+                        <a href="#publications" class="nav-link">Publications</a>
                     </li>
                     <li class="w-full text-center">
                         <a href="#projects" class="nav-link">Projects</a>
@@ -196,14 +196,14 @@
                         <p class="text-lg text-t-black dark:text-white">Hello, I am Faraz Kabir Khan. I am a Computer
                             Science and Engineering graduate. While attending university, I worked part-time at <a
                                 href="https://www.bitechx.com/" target="_blank"
-                                class="dark:hover:text-t-red hover:text-t-red "><em>BiTechX</em></a> as a <span
+                                class="dark:hover:text-t-red hover:text-t-red "><em class="font-bold">BiTechX</em></a> as a <span
                                 class="text-t-red">senior front-end web developer</span> with clients from the USA,
                             Canada, Russia, and other countries. I feel thrilled about engaging in innovative ideas and pioneering projects. Currently, I am am collaborating with <a href="https://circuitmaesters.com/"
-                                target="_blank" class=" dark:hover:text-t-red hover:text-t-red"><em>Circuit
+                                target="_blank" class=" dark:hover:text-t-red hover:text-t-red"><em class="font-bold">Circuit
                                     Maesters</em></a> to build the <span class="text-t-red">first driverless formula
                                 racing car</span> in Bangladesh. I have also helped team <a
                                 href="https://austmarsrover.org/" target="_blank"
-                                class=" dark:hover:text-t-red hover:text-t-red"><em>AUST Mars Rover</em></a> to construct
+                                class=" dark:hover:text-t-red hover:text-t-red"><em class="font-bold">AUST Mars Rover</em></a> to construct
                             <span class="text-t-red">Mars exploration rovers.</span>
                         </p>
                         <p class="mt-3 text-lg text-t-black dark:text-white">
@@ -593,9 +593,9 @@
                 </div>
             </div>
         </section>
-        <section data-aos="fade-down" class="py-14" id="publication">
+        <section data-aos="fade-down" class="py-14" id="publications">
             <h1 class="text-center "><span
-                    class="grad-text font-bold inline-block mx-auto bg-gradient-to-l from-t-blue to-t-red text-4xl mb-6">Publication</span>
+                    class="grad-text font-bold inline-block mx-auto bg-gradient-to-l from-t-blue to-t-red text-4xl mb-6">Publications</span>
             </h1>
             <div class="container">
 
@@ -605,9 +605,21 @@
                         Anjum, Abrar Zahir Niloy, In 19th ACS/IEEE International Conference on Computer Systems and
                         Applications (AICCSA 2022).</p>
 
-                        <div class="pb-5 mt-3">
+                        <div class="pb-4 mt-3">
                             <a class="  bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
                                 href="https://arxiv.org/abs/2211.02138" target="_blank">View </a>
+                        </div>
+
+
+                </div>
+                <div class="p-4 w-full mt-2 bg-white/75 dark:bg-gray-800/50  rounded-lg  shadow-lg sm:p-6 ">
+                    <p class="dark:text-white"><span class="font-bold">"Shapes2Toon: Generating Cartoon Characters from Simple Geometric Shapes"</span>,
+                        Simanta Deb Turja, Mohammad Imrul Jubair, Md. Shafiur Rahman, Md. Hasib Al Zadid, Mohtasim Hossain Shovon, <span class="font-bold">Md. Faraz Kabir Khan</span>, In 19th ACS/IEEE International Conference on Computer Systems and
+                        Applications (AICCSA 2022).</p>
+
+                        <div class="pb-4 mt-3">
+                            <a class="  bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
+                                href="https://arxiv.org/abs/2211.02141" target="_blank">View </a>
                         </div>
 
 
@@ -1063,7 +1075,7 @@
                                         <p class="font-thin mb-3 font-normal text-t-black dark:text-white"><span
                                                 class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">WordPress</span>
                                             <span
-                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Youtube</span>
+                                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">YouTube</span>
                                         </p>
                                         <p class="mb-3 font-normal text-t-black dark:text-gray-200 ">A short course for
                                             beginners to get started with WordPress</p>
