--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                                 href="https://www.bitechx.com/" target="_blank"
                                 class="dark:hover:text-t-red hover:text-t-red "><em class="font-bold">BiTechX</em></a> as a <span
                                 class="text-t-red">senior front-end web developer</span> with clients from the USA,
-                            Canada, Russia, and other countries. I feel thrilled about engaging in innovative ideas and pioneering projects. Currently, I am am collaborating with <a href="https://circuitmaesters.com/"
+                            Canada, Russia, and other countries. I feel thrilled about engaging in innovative ideas and pioneering projects. Currently, I am collaborating with <a href="https://circuitmaesters.com/"
                                 target="_blank" class=" dark:hover:text-t-red hover:text-t-red"><em class="font-bold">Circuit
                                     Maesters</em></a> to build the <span class="text-t-red">first driverless formula
                                 racing car</span> in Bangladesh. I have also helped team <a
