--- a/index.html
+++ b/index.html
@@ -607,7 +607,7 @@
 
                         <div class="pb-4 mt-3">
                             <a class="  bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
-                                href="https://arxiv.org/abs/2211.02138" target="_blank">View </a>
+                                href="https://ieeexplore.ieee.org/document/10017541" target="_blank">View </a>
                         </div>
 
 
@@ -619,7 +619,7 @@
 
                         <div class="pb-4 mt-3">
                             <a class="  bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
-                                href="https://arxiv.org/abs/2211.02141" target="_blank">View </a>
+                                href="https://ieeexplore.ieee.org/document/10017484" target="_blank">View </a>
                         </div>
 
 
