--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                     <!-- <h1 class="text-4xl mt-4  p-6 leading-none text-white border-solid border-b-2 border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice inline-block ">AI Apprentice_Web Artisan_Tech Enthusiast
                     </h1> -->
                     <!-- <button type="button" class="text-white bg-gradient-to-r from-t-red via-red-600 to-red-700 hover:bg-gradient-to-br focus:ring-4 focus:ring-red-300 dark:focus:ring-red shadow-lg shadow-t-red/50 dark:shadow-lg dark:shadow-t-red/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2"></button> -->
-                    <a href="/src/Faraz Kabir Khan - Resume.pdf" type="button" target="_blank" data-aos="fade-up"
+                    <a href="/src/Resume - Faraz.pdf" type="button" target="_blank" data-aos="fade-up"
                         class=" text-white bg-gradient-to-r from-t-blue via-blue-600 to-blue-700 hover:bg-gradient-to-br focus:ring-4 focus:ring-blue-300 dark:focus:ring-blue-800 shadow-lg shadow-t-blue/50 dark:shadow-lg dark:shadow-t-blue/80 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 ">Download
                         Resume</a>
                 </div>
