--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Faraz Kabir Khan</title>
-    <link rel="icon" type="image/x-icon" href="/images/favicon-32x32.png">
+    <link rel="icon" type="image/x-icon" href="/images/Faraz_Khan_logo.png">
     <meta property="og:title" content="Faraz Kabir Khan" />
     <meta property="og:description"
         content="Md. Faraz Kabir Khan is an AI apprentice and an experienced web developer from Bangladesh. " />
@@ -46,8 +46,8 @@
         class=" fixed top-0 z-40 w-full backdrop-blur  lg:z-50 lg:border-b lg:border-t-black/10 dark:border-t-black/[0.06] bg-white/75 supports-backdrop-blur:bg-white/95 dark:bg-t-black/75">
         <div class="container  flex flex-wrap justify-between items-center mx-auto">
             <a href="#" class="flex ">
-                <img class="dark:hidden max-w-full w-32" src="images/logo.png" alt="logo">
-                <img class="dark:inline-block hidden max-w-full w-32" src="images/logo_darkmode.png" alt="logo">
+                <img class="dark:hidden max-w-full w-[4.5rem] py-1" src="images/Faraz_Khan_logo.png" alt="logo">
+                <img class="dark:inline-block hidden max-w-full w-[4.5rem] py-1" src="images/Faraz_Khan_logo.png" alt="logo">
 
             </a>
 
@@ -193,18 +193,9 @@
                         <h1
                             class=" text-t-blue text-4xl mt-8 md:mt-0  font-bold bg-gradient-to-l from-t-blue via-blue-700 to-t-red  grad-text ">
                             About Me</h1>
-                        <p class="text-lg text-t-black dark:text-white">Hello, I am Faraz Kabir Khan. I am a Computer
-                            Science and Engineering graduate. While attending university, I worked part-time at <a
-                                href="https://www.bitechx.com/" target="_blank"
-                                class="dark:hover:text-t-red hover:text-t-red "><em class="font-bold">BiTechX</em></a> as a <span
-                                class="text-t-red">senior front-end web developer</span> with clients from the USA,
-                            Canada, Russia, and other countries. I feel thrilled about engaging in innovative ideas and pioneering projects. Currently, I am collaborating with <a href="https://circuitmaesters.com/"
-                                target="_blank" class=" dark:hover:text-t-red hover:text-t-red"><em class="font-bold">Circuit
-                                    Maesters</em></a> to build the <span class="text-t-red">first driverless formula
-                                racing car</span> in Bangladesh. I have also helped team <a
-                                href="https://austmarsrover.org/" target="_blank"
-                                class=" dark:hover:text-t-red hover:text-t-red"><em class="font-bold">AUST Mars Rover</em></a> to construct
-                            <span class="text-t-red">Mars exploration rovers.</span>
+                        <p class="text-lg text-t-black dark:text-white">Hello! I am Faraz Kabir Khan. I am currently pursuing a Master's in Information Technology at the University of Western Australia. With over 2.5 years of experience as a senior front-end developer at BiTechX, I have had the privilege of serving clients across the globe, including those from the USA and Canada.
+
+                            During my undergraduate studies, I contributed significantly to two impactful projects: the Mars Rover, where I integrated AI features and managed website development, and the Driverless Formula Racing Car, where I played a pivotal role in strategizing software and hardware frameworks, and data engineering process.</span>
                         </p>
                         <p class="mt-3 text-lg text-t-black dark:text-white">
                             So far, I have worked with these technologies -
@@ -414,11 +405,9 @@
                             </div>
                         </div>
                         <div class="mt-3 sm:pr-8">
-                            <h2 class="text-lg font-semibold text-gray-900 dark:text-white ">B.Sc. in Computer Science
-                                and Engineering, 2022</h2>
-                            <a href="https://www.aust.edu/" target="_blank"
-                                class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500 dark:hover:text-t-red hover:text-t-red">Ahsanullah
-                                University of Science and Technology</a>
+                            <h2 class="text-lg font-semibold text-gray-900 dark:text-white ">Master of Information Technology (Ongoing)</h2>
+                            <a href="https://www.uwa.edu.au/" target="_blank"
+                                class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500 dark:hover:text-t-red hover:text-t-red">The University of Western Australia</a>
 
                             <!-- <p class="text-base font-normal text-gray-500 dark:text-gray-400">Get started with dozens of web components and interactive elements.</p> -->
                         </div>
@@ -438,13 +427,13 @@
                             </div>
                         </div>
                         <div class="mt-3 sm:pr-8">
-                            <h2 class="text-lg font-semibold text-gray-900 dark:text-white ">Higher Secondary
-                                Certificate in Science, 2016</a>
-                                <a href="https://www.dhakacitycollege.edu.bd/" target="_blank"
-                                    class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500 dark:hover:text-t-red hover:text-t-red">Dhaka
-                                    City College</a>
+                            <h2 class="text-lg font-semibold text-gray-900 dark:text-white ">B.Sc. in Computer Science
+                                and Engineering, 2022</h2>
+                            <a href="https://www.aust.edu/" target="_blank"
+                                class="block mb-2 text-sm font-normal leading-none text-gray-400 dark:text-gray-500 dark:hover:text-t-red hover:text-t-red">Ahsanullah
+                                University of Science and Technology</a>
 
-                                <!-- <p class="text-base font-normal text-gray-500 dark:text-gray-400">Get started with dozens of web components and interactive elements.</p> -->
+                            <!-- <p class="text-base font-normal text-gray-500 dark:text-gray-400">Get started with dozens of web components and interactive elements.</p> -->
                         </div>
                     </li>
 
@@ -554,13 +543,10 @@
                     <div class="md:w-1/4 w-full mb-4 md:pr-2">
                         <div
                             class="flex h-full flex-col justify-center items-center flex-wrap p-6 py-10 max-w-sm bg-t-red rounded-lg  shadow-md dark:bg-t-purple/50  bg-gradient-to-bl from-t-red to-t-blue">
-                            <svg class="fill-white mx-auto h-20" id="Layer_1" data-name="Layer 1"
-                                xmlns="http://www.w3.org/2000/svg" viewBox="0 0 120.86 122.88">
-                                <title>mechanical-arm</title>
-                                <path
-                                    d="M12.94,22.06a1.47,1.47,0,0,1,.43-.16l67.57-15A10.91,10.91,0,0,1,96.37,2.56L108.22,0a.61.61,0,0,1,.5.13l11.91,9.77a.61.61,0,0,1,.15.76l-1.68,3a.59.59,0,0,1-.76.25L106,8.16l-4.46,3.71a10.84,10.84,0,0,1-3.19,7.65c-.22.22-.46.44-.7.64l.27,5.94,12.44,6a.58.58,0,0,1,.18.81l-1.74,2.73a.6.6,0,0,1-.62.31l-14.89-2.6a.58.58,0,0,1-.44-.33L87.9,22.36A10.27,10.27,0,0,1,86.79,22L43.69,36.48l28.4,13.43.08,0A17.81,17.81,0,0,1,86.72,67.44c0,.22,0,.45,0,.67v.07l4,37.21h.83a11.16,11.16,0,0,1,11.12,11.12V122a.89.89,0,0,1-.89.89H23.15a.89.89,0,0,1-.89-.89v-5.48a11.16,11.16,0,0,1,11.12-11.12h1.14l.06-.16,15.78-37L7.84,45.6a1.3,1.3,0,0,1-.41-.32,12.09,12.09,0,0,1-3.89-19.7h0A12,12,0,0,1,12.09,22c.29,0,.57,0,.85,0Zm78-13.12a2.82,2.82,0,1,1-2.82,2.82,2.82,2.82,0,0,1,2.82-2.82Zm-11,1.2L18.39,23.8a12.16,12.16,0,0,1,2.25,1.78,12.08,12.08,0,0,1,0,17.09h0a12,12,0,0,1-5.91,3.26L51.27,65.4a17.74,17.74,0,0,1,5.1-10.53h0a17.75,17.75,0,0,1,9-4.85L39.11,37.58a1.45,1.45,0,0,1-.77-.87,1.48,1.48,0,0,1,.93-1.87L83.46,20l-.52-.48a10.86,10.86,0,0,1-3.18-7.7,11.66,11.66,0,0,1,.12-1.68ZM96.66,5.8a8.52,8.52,0,1,0,2.49,6,8.49,8.49,0,0,0-2.49-6ZM12.09,30.48a3.65,3.65,0,1,1-3.64,3.65,3.64,3.64,0,0,1,3.64-3.65Zm6.46-2.81a9.14,9.14,0,1,0,2.67,6.46,9.13,9.13,0,0,0-2.67-6.46ZM68.94,59.5A7.94,7.94,0,1,1,61,67.44a7.95,7.95,0,0,1,7.94-7.94ZM84.58,75.91A18.16,18.16,0,0,1,81.51,80h0a17.79,17.79,0,0,1-29.67-7.69L37.73,105.39h50L84.58,75.91ZM79.42,57a14.85,14.85,0,0,0-21,0h0a14.82,14.82,0,0,0,21,21h0a14.82,14.82,0,0,0,0-21Zm-46,50.21A9.39,9.39,0,0,0,24,116.51v1h76.85v-1a9.35,9.35,0,0,0-9.34-9.34Z" />
-                            </svg>
-                            <p class="text-white mt-3 text-center">Robotics</p>
+                            
+                            <?xml version="1.0" ?><!-- Uploaded to: SVG Repo, www.svgrepo.com, Generator: SVG Repo Mixer Tools -->
+                            <svg class="fill-white mx-auto h-20" id="Layer_1" viewBox="0 0 48 48" data-name="Layer 1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1,.cls-2{fill:none;stroke:#fff;stroke-linejoin:round;stroke-width:2px;}.cls-2{stroke-linecap:round;}</style></defs><title/><rect class="cls-1" height="46" rx="4" ry="4" transform="translate(48 48) rotate(180)" width="46" x="1" y="1"/><rect class="cls-2" height="22" width="7" x="4" y="22"/><rect class="cls-2" height="16" width="7" x="15" y="28"/><rect class="cls-2" height="25" width="7" x="26" y="19"/><rect class="cls-2" height="21" width="7" x="37" y="23"/><circle class="cls-2" cx="7" cy="14" r="2"/><circle class="cls-2" cx="19" cy="20" r="2"/><circle class="cls-2" cx="30" cy="11" r="2"/><circle class="cls-2" cx="41" cy="15" r="2"/><line class="cls-2" x1="9" x2="17" y1="15" y2="19"/><line class="cls-2" x1="21" x2="28" y1="19" y2="12"/><line class="cls-2" x1="32" x2="39" y1="12" y2="14"/></svg>
+                            <p class="text-white mt-3 text-center">Data Science</p>
                         </div>
 
 
@@ -1196,19 +1182,7 @@
                             class=" bg-gradient-to-r from-t-blue via-blue-700 to-t-blue  text-center inline-block px-8 py-4 rounded-tr-xl rounded-bl-xl bg-t-red mx-auto text-4xl font-bold text-white">
                             Get in Touch
                         </h2>
-                        <p class="my-12 text-xl text-center dark:text-white text-t-black">I am looking for
-                            <span
-                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">research
-                                opportunities</span> in the following areas - <span
-                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Computer
-                                Vision</span>, <span
-                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Generative
-                                Adversarial Networks</span>, <span
-                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">Autonomous
-                                Vehicles</span>, and others similar to these.
-                            I am also available for <span
-                                class="dark:text-white border-solid border-b-2 leading-neg border-t-blue border-gradient-to-r from-t-red to-t-blue b-slice">freelance
-                                work</span>. Feel free to contact me anytime at <a
+                        <p class="my-12 text-xl text-center dark:text-white text-t-black">I am enthusiastic about leveraging my IT skills, particularly in AI and web development, and I am open to exploring opportunities in IT support or administration roles. With a strong commitment to continuous learning and problem-solving, I am eager to embark on new challenges and make meaningful contributions to the field of technology. Feel free to contact me anytime at <a
                                 class="dark:text-white border-solid border-b-4 leading-neg border-t-blue font-bold hover:text-t-blue dark:hover:text-t-blue"
                                 href="mailto:farazkabir@gmail.com">farazkabir@gmail.com</a>. I'm eagerly looking forward
                             to
