--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         content="Md. Faraz Kabir Khan is an AI apprentice and an experienced web developer from Bangladesh. " />
     <meta property="og:image" content="images/preview.jpg" />
     <meta name="keywords"
-        content="Faraz Kabir Khan, Faraz, Faraz Khan, Web Developer, AI Engineer, Artificial Intelligence Engineer, Software Engineer, Front-end Web Developer">
+        content="Md Faraz Kabir Khan, Faraz Kabir Khan, Faraz, Faraz Khan, Web Developer, AI Engineer, Artificial Intelligence Engineer, Software Engineer, Front-end Web Developer">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-1W0MT0PK2H"></script>
     <script>
@@ -193,7 +193,7 @@
                         <h1
                             class=" text-t-blue text-4xl mt-8 md:mt-0  font-bold bg-gradient-to-l from-t-blue via-blue-700 to-t-red  grad-text ">
                             About Me</h1>
-                        <p class="text-lg text-t-black dark:text-white">Hello! I am Faraz Kabir Khan. I am currently pursuing a Master's in Information Technology at the University of Western Australia. With over 2.5 years of experience as a senior front-end developer at BiTechX, I have had the privilege of serving clients across the globe, including those from the USA and Canada.
+                        <p class="text-lg text-t-black dark:text-white">Hello! I am Md. Faraz Kabir Khan. I am currently pursuing a Master's in Information Technology at the University of Western Australia. With over 2.5 years of experience as a senior front-end developer at BiTechX, I have had the privilege of serving clients across the globe, including those from the USA and Canada.
 
                             During my undergraduate studies, I contributed significantly to two impactful projects: the Mars Rover, where I integrated AI features and managed website development, and the Driverless Formula Racing Car, where I played a pivotal role in strategizing software and hardware frameworks, and data engineering process.</span>
                         </p>
@@ -1184,10 +1184,7 @@
                         </h2>
                         <p class="my-12 text-xl text-center dark:text-white text-t-black">I am enthusiastic about leveraging my IT skills, particularly in AI and web development, and I am open to exploring opportunities in IT support or administration roles. With a strong commitment to continuous learning and problem-solving, I am eager to embark on new challenges and make meaningful contributions to the field of technology. Feel free to contact me anytime at <a
                                 class="dark:text-white border-solid border-b-4 leading-neg border-t-blue font-bold hover:text-t-blue dark:hover:text-t-blue"
-                                href="mailto:farazkabir@gmail.com">farazkabir@gmail.com</a>. I'm eagerly looking forward
-                            to
-                            hearing from you.
-                        </p>
+                                href="mailto:farazkabir@gmail.com">farazkabir@gmail.com</a>.                         </p>
                         <div class="flex flex-wrap justify-center items-center space-x-4 px-4 ">
                             <a class="" target="_blank" href="https://www.facebook.com/farazkabirkhan.shad/">
                                 <svg class="h-10 hover:scale-110 transition  duration-300 dark:fill-white fill-t-black hover:fill-t-red dark:hover:fill-t-red "
