--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
 
                 <div class="p-4 w-full  bg-white/75 dark:bg-gray-800/50  rounded-lg  shadow-lg sm:p-6 ">
                     <p class="dark:text-white"><span class="font-bold">"RTSMM: A Robust Tree-based Stacking Machine Learning Model for the Prediction of Obesity in Adulthood"</span>,
-                        Mohammad Azad, <span class="font-bold">Md. Faraz Kabir Khan</span>, Sameh Abd El-Ghany (Ongoing)</p>
+                        Dr. Mohammad Mohiuddin Azad, <span class="font-bold">Md. Faraz Kabir Khan</span>, Dr. Sameh Abd El-Ghany (Ongoing)</p>
 
                         <!-- <div class="pb-4 mt-3">
                             <a class="  bg-t-black rounded-lg py-1 px-2 text-white hover:filter hover:brightness-150 transition duration-500"
